Fixed max-height bug when content is too big

--- a/quickModal.css
+++ b/quickModal.css
@@ -33,6 +33,8 @@
   font-family: Arial;
   opacity: 0;
   transition: all .5s;
+  max-height: calc(100% - 115px);
+  overflow-y: auto;
 }
 .quick-modal.active {
   top: 100px;
